force-app/main/default/objects/Expense_Item__c/Expense_Item__c.object-meta.xml
<CustomObject>
    <label>Expense Item</label>
    <pluralLabel>Expense Items</pluralLabel>
    <nameField>
        <label>Expense Item Number</label>
        <displayFormat>EXPI-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Individual expense claim line item per expense type per day. Child of Expense__c via Master-Detail relationship. Stores GPS/manual distance, eligible/claimed/approved amounts, and receipt information.</description>
</CustomObject>