force-app/main/default/objects/Expense_Item__c/fields/Applied_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Applied_Distance_KM__c</fullName>
    <label>Applied Distance KM</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <formula>IF(NOT(ISBLANK(Manual_Distance_KM__c)), Manual_Distance_KM__c, GPS_Distance_KM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Effective distance used for calculations. Uses manual override if provided, otherwise GPS distance.</description>
</CustomField>