force-app/main/default/objects/Expense_Item__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>Comments history from approvers with timestamps</description>
    <label>Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>