force-app/main/default/objects/Expense_Item__c/fields/City_Tier__c.field-meta.xml
<CustomField>
    <fullName>City_Tier__c</fullName>
    <description>City tier classification for lodging</description>
    <label>City Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>