force-app/main/default/objects/Expense_Item__c/fields/Claimed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Amount__c</fullName>
    <label>Claimed Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Amount claimed by the employee.</description>
</CustomField>