force-app/main/default/objects/Expense_Item__c/fields/Day_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Day_Attendance__c</fullName>
    <label>Day Attendance</label>
    <type>Lookup</type>
    <referenceTo>Day_Attendance__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>Expense_Items</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>