force-app/main/default/objects/Expense_Item__c/fields/Distance_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Distance_Override_Reason__c</fullName>
    <label>Distance Override Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Mandatory justification when manual distance differs from GPS distance.</description>
</CustomField>