force-app/main/default/objects/Expense_Item__c/fields/Duty_Type__c.field-meta.xml
<CustomField>
    <fullName>Duty_Type__c</fullName>
    <description>Duty type for this expense item</description>
    <label>Duty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>EX-HQ</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>