force-app/main/default/objects/Expense_Item__c/fields/Eligible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Amount__c</fullName>
    <label>Eligible Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Auto-calculated eligible amount based on eligibility rules.</description>
</CustomField>