force-app/main/default/objects/Expense_Item__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Daily Allowance</fullName><default>false</default><label>Daily Allowance</label></value>
            <value><fullName>Travelling Allowance</fullName><default>false</default><label>Travelling Allowance</label></value>
            <value><fullName>Fuel</fullName><default>false</default><label>Fuel</label></value>
            <value><fullName>Toll</fullName><default>false</default><label>Toll</label></value>
            <value><fullName>Hotel</fullName><default>false</default><label>Hotel</label></value>
            <value><fullName>Food</fullName><default>false</default><label>Food</label></value>
            <value><fullName>Mobile</fullName><default>false</default><label>Mobile</label></value>
            <value><fullName>Printing</fullName><default>false</default><label>Printing</label></value>
            <value><fullName>Stationery</fullName><default>false</default><label>Stationery</label></value>
            <value><fullName>Miscellaneous</fullName><default>false</default><label>Miscellaneous</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>