force-app/main/default/objects/Expense_Item__c/fields/From_Location__c.field-meta.xml
<CustomField>
    <fullName>From_Location__c</fullName>
    <label>From</label>
    <type>Text</type>
    <length>255</length>
    <description>Starting location for travel expense</description>
</CustomField>