force-app/main/default/objects/Expense_Item__c/fields/GPS_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>GPS_Distance_KM__c</fullName>
    <label>GPS Distance KM</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>Auto-populated from Day_Attendance__c GPS data.</description>
</CustomField>