force-app/main/default/objects/Expense_Item__c/fields/Has_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Has_Receipt__c</fullName>
    <label>Has Receipt</label>
    <type>Checkbox</type>
    <formula>NOT(ISBLANK(Receipt_URL__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Indicates whether a receipt has been uploaded.</description>
</CustomField>