force-app/main/default/objects/Expense_Item__c/fields/Is_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible__c</fullName>
    <label>Is Eligible</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this expense item qualifies based on eligibility rules (distance thresholds met, etc.).</description>
</CustomField>