force-app/main/default/objects/Expense_Item__c/fields/Is_Metro__c.field-meta.xml
<CustomField>
    <fullName>Is_Metro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the city is a metro city (affects lodging limits)</description>
    <label>Is Metro</label>
    <type>Checkbox</type>
</CustomField>