force-app/main/default/objects/Expense_Item__c/fields/Manual_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Manual_Distance_KM__c</fullName>
    <label>Manual Distance KM</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>Manual override distance. If populated, overrides GPS distance for calculations.</description>
</CustomField>