force-app/main/default/objects/Expense_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>Text</type>
    <length>500</length>
    <description>Employee notes or justification for this expense item.</description>
</CustomField>