force-app/main/default/objects/Expense_Item__c/fields/Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rate_Amount__c</fullName>
    <label>Rate Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>Rate amount populated from eligibility rule.</description>
</CustomField>