force-app/main/default/objects/Expense_Item__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Text</type>
    <length>50</length>
    <description>Populated from eligibility rule (Per Day, Per KM, Flat Monthly, Actual).</description>
</CustomField>