force-app/main/default/objects/Expense_Item__c/fields/Receipt_URL__c.field-meta.xml
<CustomField>
    <fullName>Receipt_URL__c</fullName>
    <label>Receipt URL</label>
    <type>Url</type>
    <description>Link to uploaded receipt document.</description>
</CustomField>