force-app/main/default/objects/Expense_Item__c/fields/System_Calculated_Amount__c.field-meta.xml
<CustomField>
    <fullName>System_Calculated_Amount__c</fullName>
    <label>System Calculated Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
    <description>System-computed eligible amount based on eligibility rules. Displayed alongside claimed amount for transparency.</description>
</CustomField>