force-app/main/default/objects/Expense_Item__c/fields/To_Location__c.field-meta.xml
<CustomField>
    <fullName>To_Location__c</fullName>
    <label>To</label>
    <type>Text</type>
    <length>255</length>
    <description>Destination location for travel expense</description>
</CustomField>