force-app/main/default/objects/Expense_Item__c/fields/Travel_Mode__c.field-meta.xml
<CustomField>
    <fullName>Travel_Mode__c</fullName>
    <description>Mode of travel for TA expense items (Bike, Car, Bus, Train, Auto, Public Transport)</description>
    <label>Travel Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>