force-app/main/default/objects/Expense_Item__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <description>Vehicle type for travel expense calculation (different per-KM rates)</description>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Own Bike</fullName>
            </value>
            <value>
                <fullName>Own Car</fullName>
            </value>
            <value>
                <fullName>Bus: AC</fullName>
            </value>
            <value>
                <fullName>Bus: Non-AC</fullName>
            </value>
            <value>
                <fullName>Train: 1AC</fullName>
            </value>
            <value>
                <fullName>Train: 2AC</fullName>
            </value>
            <value>
                <fullName>Train: 3AC</fullName>
            </value>
            <value>
                <fullName>Train: Sleeper</fullName>
            </value>
            <value>
                <fullName>Train: General</fullName>
            </value>
            <value>
                <fullName>Flight: Business</fullName>
            </value>
            <value>
                <fullName>Flight: Economy</fullName>
            </value>
            <value>
                <fullName>Flight: Premium Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>