force-app/main/default/objects/Expense_Item__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <description>Working hours for DA calculation: less than 4 = 0, 4-8 = half day, more than 8 = full day</description>
    <label>Working Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>