force-app/main/default/objects/Expense_Item__c/validationRules/City_Required_For_Lodging.validationRule-meta.xml
<ValidationRule>
    <fullName>City_Required_For_Lodging</fullName>
    <active>true</active>
    <description>City is required when expense type is Lodging.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Expense_Type__c, "Lodging"),
    ISBLANK(City__c)
)</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>City is required for Lodging expenses.</errorMessage>
</ValidationRule>