force-app/main/default/objects/Expense_Item__c/validationRules/Claimed_Amount_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Claimed_Amount_Non_Negative</fullName>
    <active>true</active>
    <description>Claimed Amount must be non-negative.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Claimed_Amount__c)),
    Claimed_Amount__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Claimed_Amount__c</errorDisplayField>
    <errorMessage>Claimed Amount cannot be negative.</errorMessage>
</ValidationRule>