force-app/main/default/objects/Expense_Item__c/validationRules/Distance_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Distance_Non_Negative</fullName>
    <active>true</active>
    <description>Manual and GPS distance must be non-negative.</description>
    <errorConditionFormula>OR(
    AND(NOT(ISBLANK(Manual_Distance_KM__c)), Manual_Distance_KM__c &lt; 0),
    AND(NOT(ISBLANK(GPS_Distance_KM__c)), GPS_Distance_KM__c &lt; 0)
)</errorConditionFormula>
    <errorDisplayField>Manual_Distance_KM__c</errorDisplayField>
    <errorMessage>Distance values cannot be negative.</errorMessage>
</ValidationRule>